# subdomain-watcher

./: .dockerignore  .gitignore  .sonarcloud.properties  Dockerfile  LICENSE  README.md  compose.prod.yaml  compose.yaml  config.yaml.example  provider-config.yaml.example  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: dependabot.yaml  docker.yaml  lint.yaml  mypy.yaml  ruff.yaml
subdomain_watcher/: config.py  database.py  discord.py  main.py  ping.py  subfinder.py  watcher.py
